--- a/VRChat/19/1264519.html
+++ b/VRChat/19/1264519.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "AwO9UY7LDhRJARsPuwIRX1GyiTX6JhlgGJCLYjkdHDY="></script>
+    "jwQYNevrxfwn7YlBKsMFL2dBfbQbufTnecyqGOMtwNI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"KTNヘルメット","description":"内容\nサイバーパンク感あふれる狐ヘルメットです。\nローポリモデルで作成しているので、ゲームやVRChatで、使用してください。\n\n＝＝＝＝＝＝＝構成＝＝＝＝＝＝＝＝＝\nKTN.zip\n|-KTN_MET\t\t[FBXファイル][Tris:664][Faces:340][Verts:370]\n|-cyberpunk\t\t[フォルダ]\n|    |-cyberpunk \t[Unity Package file][Unity 2017.4.15f1より出力]\n|    |-Texture4種\t[Color, Emission, Metaric, Normal][4096x4096][png]\n|-army\t\t\t[フォルダ]\n|    |-army\t \t[Unity Package file][Unity 2017.4.15f1より出力]\n|    |-Texture4種\t[Color, Emission, Metaric, Normal][4096x4096][png]\n|-sf\t\t\t[フォルダ]\n     |-sf\t \t[Unity Package file][Unity 2017.4.15f1より出力]\n     |-Texture4種\t[Color, Emission, Metaric, Normal][4096x4096][png]\n\n\n\n\n＝＝＝＝＝＝＝＝作者＝＝＝＝＝＝＝\n名前　のしし\n\n[バーチャルマーケット2]\n参加：FutureTerminalA　\n紙綴機　代表　のびるホチキス\nhttps://nobiruhochikisu.booth.pm\n\n[Twitter]\nhttps://twitter.com/noshishi4\n\n[VRChat]\nNOSHISHI\n\n＝＝＝＝＝＝＝利用規約＝＝＝＝＝＝＝＝\n本データを購入した時点で以下の利用規約をに同意したとみなします。\n[禁止及び要相談]\n・本データおよび改変データを購入者以外が使用可能な状態にすることを許可しない。\n・上記より、本データおよび改変データの無許可配布、販売は許可しない。\n\n[許可]\n・本データおよび改変データをデータ再利用できない形で、アプリケーションおよびゲームなどに使用することを有償、無償にかかわらず許可する。\n\n・本データおよび改変データを使用した動画撮影および放送は有償、無償にかかわらず許可する。\n\n・R-18、R-18Gへの利用を許可する。\n\n・データおよび改変データに対して、クレジット表記を省略、省くことを許可する。\n\n[免責]\n・本データを含むあらゆるデータを利用することで、利用者が受ける損害および被害に関し、作者はいかなる保証も致しません。\n・本データを含むあらゆるデータを利用することで、利用者が他者に損害および被害を与えた場合は、その責任及び損害は当該利用者にあるものとし、作者は一切責任を負いません。","url":"https://booth.pm/ja/items/1264519","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/5990ded3-4033-4ce9-b375-f814c7720746/i/1264519/69710c93-87dc-46ee-9b08-c4ecd7ce7bb2_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AwO9UY7LDhRJARsPuwIRX1GyiTX6JhlgGJCLYjkdHDY="></script>
+    nonce="jwQYNevrxfwn7YlBKsMFL2dBfbQbufTnecyqGOMtwNI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -601,7 +601,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
